style.css
:root {
	/* Theme Fixed */
	--color-fixed-accent: rgba(120, 205, 255, 1);
	--color-fixed-action: rgba(40, 255, 165, 1);
	--color-fixed-dark: rgba(35, 50, 85, 1);

	/* Theme Light */
	--color-background: rgba(255, 250, 235, 1);
	--color-ghost: rgba(25, 40, 70, 0.05);
	--color-main: rgba(35, 50, 85, 1);
	--color-secondary: rgba(35, 50, 85, 0.4);
	--color-tertiary: rgba(115, 130, 155, 1);

	/* Font Sizes */
	font-size: 62.5%; /* (62.5/100) * 16px = 10px */
	--font--sizeXL: 16rem; /* 160px */
	--font--sizeL: 8rem; /* 80px */
	--font--sizeM: 2.8rem; /* 28px */
	--font--sizeS: 2rem; /* 20px */
	--font--sizeXS: 1.6rem; /* 16px */

	/* Border Radius */
	--border-radiusL: 4rem;
	--border-radiusS: 1.6rem;
}

[data-theme='dark'] {
	/* Theme Dark */
	--color-background: rgba(35, 35, 47, 1);
	--color-ghost: rgba(166, 166, 233, 0.08);
	--color-main: rgba(255, 250, 235, 1);
	--color-secondary: rgba(255, 255, 255, 0.4);
	--color-tertiary: rgb(140, 160, 190, 1);
}

.row {
	--bs-gutter-x: 0 !important;
	--bs-gutter-y: 0;
}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

body {
	background-color: var(--color-background) !important;
}

section {
	margin: 0 0 1rem;
}

.page {
	max-width: 1200px !important;
	margin: auto;
}

.header {
	padding: 0 2rem;
}

.content {
	padding: 2rem 2rem;
}

.flex {
	display: flex;
	align-items: flex-start;
}

.horizontal {
	flex-direction: row;
	align-items: center;
}

.vertical {
	flex-direction: column;
}

.reverse {
	flex-direction: row-reverse;
}

.align-right {
	-moz-text-align-last: right; /* For Firefox prior 58.0 */
	text-align-last: right;
	text-align: right; /* Safari */
}

.infos > .pill {
	margin-right: 1rem;
}

.pill {
	background-color: var(--color-ghost);
	border-radius: var(--border-radiusL);
	padding: 0.8rem 2rem;
}

.pillSquare {
	background-color: var(--color-ghost);
	border-radius: var(--border-radiusS);
	padding: 1.2rem;
	/* width: -moz-fit-content;
	width: fit-content; */
}

.hourly,
#hourly-weather {
	align-items: center;
	justify-content: space-between;
}

.hourly > svg {
	margin: 0 0 1rem;
}

.card,
.card-body {
	min-width: 14rem !important;
}

.card,
.hourly {
	margin: 0 0.4rem;
}

.card-body {
	padding: 1.6rem !important;
}

.scrolling-wrapper {
	overflow-x: scroll;
	overflow-y: hidden;
	white-space: nowrap;
	-webkit-overflow-scrolling: touch;
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
	/* .card {
    display: inline-block;
  } */
}

/* Hide scrollbar for Chrome, Safari and Opera */
.scrolling-wrapper::-webkit-scrollbar {
	display: none;
}

.description {
	height: 4rem;
	margin: 1rem 0 1.4rem;
	min-width: 12.4rem !important;
}

.details,
#daily-weather {
	justify-content: space-between;
}

.details > h4 {
	margin: 0.4rem 0.8rem !important;
}

.space8 {
	margin: 0.8rem 0;
}

.space12 {
	margin: 1.2rem 0;
}

.space16 {
	margin: 1.6rem 0;
}

.space20 {
	margin: 2rem 0;
}

hr.divider {
	border-top: 1px solid !important;
	opacity: 0.1;
}

h1,
h2,
h3,
h4,
h5,
h6,
p,
a,
span,
.navbar {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	padding-top: 0 !important;
	padding-bottom: 0 !important;
	margin-bottom: 0 !important;
	color: var(--color-main);
}

.navbar {
	padding: 2rem 0 !important;
}

.container-fluid {
	padding-left: 0 !important;
	padding-right: 0 !important;
}

.btn,
.form-control,
.card {
	border-radius: var(--border-radiusS) !important;
}

.btn,
.form-control {
	padding: 1.2rem 2rem !important;
}

.form-control,
.card {
	background-color: var(--color-ghost) !important;
	border: none !important;
	color: var(--color-main) !important;
}

.btn {
	background: var(--color-fixed-action) !important;
	color: var(--color-fixed-dark) !important;
}

.icons {
	fill: var(--color-secondary);
}

.icons-stroke {
	stroke: var(--color-secondary);
}

.main {
	color: var(--color-main);
}

.secondary {
	color: var(--color-secondary);
}

.tertiary {
	color: var(--color-tertiary);
}

.titleXL {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeXL) !important;
	line-height: 1em;
}

.titleL {
	font-family: Product-Sans-Bold, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeL) !important;
}

.titleM {
	font-family: Product-Sans-Bold, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeM) !important;
}

.titleS {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeS) !important;
}

.titleXS {
	font-family: Product-Sans-Medium-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeXS) !important;
}

.titleXS-regular {
	font-family: Product-Sans-Regular, Arial, Helvetica, sans-serif;
	font-size: var(--font--sizeXS) !important;
}

@font-face {
	font-family: 'Product-Sans-Regular';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Regular'), url('./fonts/ProductSans-Regular.woff') format('woff');
}

@font-face {
	font-family: 'Product-Sans-Bold';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Bold'), url('./fonts/ProductSans-Bold.woff') format('woff');
}

@font-face {
	font-family: 'Product-Sans-Medium-Regular';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Medium Regular'), url('./fonts/ProductSans-Medium.woff') format('woff');
}

@font-face {
	font-family: 'Product-Sans-Black-Regular';
	font-style: normal;
	font-weight: normal;
	src: local('Product Sans Black Regular'), url('./fonts/ProductSans-Black.woff') format('woff');
}

/* X-Small devices (portrait phones, less than 576px) */
/* No media query for `xs` since this is the default in Bootstrap */

/* Small devices (landscape phones, 576px and up) */
@media (max-width: 576px) {
	.page {
		margin: auto;
	}
	.content:first-child {
		margin-bottom: 0;
	}
	.content {
		padding: 2rem 2rem;
	}
	.hourly {
		padding-right: 1rem;
	}
	.align-right {
		margin-left: 10%;
		-moz-text-align-last: center; /* For Firefox prior 58.0 */
		text-align-last: center;
	}
	.infos > .pill {
		margin-left: auto;
		margin-right: auto;
	}
	.titleXL,
	.titleL,
	.titleM,
	.titleS {
		text-align: center;
	}
	.titleXL {
		font-size: 12rem !important;
	}
	.titleL {
		font-size: 5rem !important;
	}

	.titleM {
		font-size: 2.8rem !important;
	}
}

/* Medium devices (tablets, 768px and up) */
@media (max-width: 768px) {
}

/* Large devices (desktops, 992px and up) */
@media (max-width: 992px) {
}

/* X-Large devices (large desktops, 1200px and up) */
@media (max-width: 1200px) {
}

/* XX-Large devices (larger desktops, 1400px and up) */
@media (max-width: 1400px) {
}

